--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <link rel="stylesheet" href="css/gumby.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/metrize.css"><!-- Metrize Icon /-->
+    <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/hoverex-all.css"><!-- Hover Info on Member /-->
 
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -517,7 +517,7 @@
     <div class="row">
         <div class="twelve columns">
             <div class="four columns">
-                <p>Kamil Lelonek, Remote</p>
+                <p>I work remotely</p>
             </div>
             <div class="four columns text-center">
                 <p><a href="#">kamil@lelonek.me</a></p>
