--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/gumby.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/icons.css">
+    <link rel="stylesheet" href="css/metrize.css">
     <link rel="stylesheet" href="css/hoverex-all.css"><!-- Hover Info on Member /-->
 
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -110,7 +111,7 @@
             <!-- PHOTO -->
             <li class="item ios"><a
                     onclick="$('#portfolio1').slideDown(); $('#portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXEMPLE">
+                    src="http://placehold.it/300x300" alt="EXAMPLE">
 
                 <div>
                     <h5>NAME OF WORK</h5>
@@ -121,7 +122,7 @@
             <!-- PHOTO -->
             <li class="item ios"><a
                     onclick="$('#portfolio2').slideDown(); $('#portfolio1, #portfolio3, #portfolio4, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXEMPLE">
+                    src="http://placehold.it/300x300" alt="EXAMPLE">
 
                 <div>
                     <h5>NAME OF WORK</h5>
@@ -132,7 +133,7 @@
             <!-- PHOTO -->
             <li class="item android"><a
                     onclick="$('#portfolio3').slideDown(); $('#portfolio1, #portfolio2, #portfolio4, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXEMPLE">
+                    src="http://placehold.it/300x300" alt="EXAMPLE">
 
                 <div>
                     <h5>NAME OF WORK</h5>
@@ -143,7 +144,7 @@
             <!-- PHOTO -->
             <li class="item android"><a
                     onclick="$('#portfolio4').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXEMPLE">
+                    src="http://placehold.it/300x300" alt="EXAMPLE">
 
                 <div>
                     <h5>NAME OF WORK</h5>
@@ -154,7 +155,7 @@
             <!-- PHOTO -->
             <li class="item android"><a
                     onclick="$('#portfolio5').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXEMPLE">
+                    src="http://placehold.it/300x300" alt="EXAMPLE">
 
                 <div>
                     <h5>NAME OF WORK</h5>
@@ -165,7 +166,7 @@
             <!-- PHOTO -->
             <li class="item web"><a
                     onclick="$('#portfolio6').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXEMPLE">
+                    src="http://placehold.it/300x300" alt="EXAMPLE">
 
                 <div>
                     <h5>NAME OF WORK</h5>
@@ -192,8 +193,8 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -209,8 +210,8 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -226,8 +227,8 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -243,8 +244,8 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -260,8 +261,8 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -277,8 +278,8 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
-                <img src="http://placehold.it/700x700" alt="EXEMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -316,7 +317,7 @@
             <!-- SERVICE !-->
             <li class="service">
                 <div class="two columns">
-                    <img src="http://placehold.it/300x300" alt="EXEMPLE">
+                    <img src="http://placehold.it/300x300" alt="EXAMPLE">
                 </div>
                 <div class="nine columns">
                     <h3>Web development</h3>
@@ -332,7 +333,7 @@
             <!-- SERVICE !-->
             <li class="service">
                 <div class="two columns">
-                    <img src="http://placehold.it/300x300" alt="EXEMPLE">
+                    <img src="http://placehold.it/300x300" alt="EXAMPLE">
                 </div>
                 <div class="nine columns">
                     <h3>Mobile Apps</h3>
@@ -348,7 +349,7 @@
             <!-- SERVICE !-->
             <li class="service">
                 <div class="two columns">
-                    <img src="http://placehold.it/300x300" alt="EXEMPLE">
+                    <img src="http://placehold.it/300x300" alt="EXAMPLE">
                 </div>
                 <div class="nine columns">
                     <h3>Full Stack</h3>
@@ -382,7 +383,7 @@
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXEMPLE">
+                <img src="http://placehold.it/300x350" alt="EXAMPLE">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
@@ -398,7 +399,7 @@
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXEMPLE">
+                <img src="http://placehold.it/300x350" alt="EXAMPLE">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
@@ -415,7 +416,7 @@
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXEMPLE">
+                <img src="http://placehold.it/300x350" alt="EXAMPLE">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
@@ -432,7 +433,7 @@
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXEMPLE">
+                <img src="http://placehold.it/300x350" alt="EXAMPLE">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
