--- a/index.html
+++ b/index.html
@@ -503,10 +503,10 @@
         <!-- Social Icon /-->
         <div class="four columns text-right ">
             <ul>
-                <li><a href="#" target="_blank"><i class='icon icon-social-blogger'></i></a></li>
-                <li><a href="#" target="_blank"><i class='icon icon-social-skype'></i></a></li>
-                <li><a href="#" target="_blank"><i class='icon icon-social-linkedin'></i></a></li>
-                <li><a href="#" target="_blank"><i class='icon icon-uniE600'></i></a></li>
+                <li><a href="skype:lelonek.kamil?chat"><i class='icon' data-icon="&#xe037;"></i></a></li> <!-- Skype -->
+                <li><a href="http://blog.arkency.com/by/squixy/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a></li> <!-- Blog -->
+                <li><a href="https://www.linkedin.com/profile/view?id=218349598" target="_blank"><i class='icon' data-icon="&#xe03e;"></i></a></li> <!-- Linkedin -->
+                <li><a href="https://github.com/KamilLelonek?tab=repositories" target="_blank"><i class='icon' data-icon="&#xe600;"></i></a></li> <!-- Github -->
             </ul>
         </div>
     </div>
