--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
     <link rel="stylesheet" href="css/gumby.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/metrize.css">
     <link rel="stylesheet" href="css/hoverex-all.css"><!-- Hover Info on Member /-->
 
@@ -521,7 +520,7 @@
                 <p>I work remotely</p>
             </div>
             <div class="four columns text-center">
-                <p><a href="#">kamil@lelonek.me</a></p>
+                <p><a href="mailto:kamil@lelonek.me">kamil@lelonek.me</a></p>
             </div>
             <div class="four columns text-right">
                 <p>Some catchy slogan</p>
