Added technologies and companies

--- a/index.html
+++ b/index.html
@@ -316,48 +316,75 @@
             <!-- SERVICE !-->
             <li class="service">
                 <div class="two columns">
-                    <img src="http://placehold.it/300x300" alt="EXAMPLE">
+                    <img src="img/technologies/skill-android.png" alt="android">
                 </div>
                 <div class="nine columns">
-                    <h3>Web development</h3>
+                    <h3>Android</h3>
 
-                    <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank
-                        sirloin
-                        bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we
-                        can not only
-                        work but also have fun and learn. </p>
+                    <p>I develop Android applications. This is the platform I like the most.<br>
+                        I use both Android Studio and Eclipse, ANT and Gradle.<br>
+                        For my work I prefer Scala rather than Java.
+                    </p>
                 </div>
             </li>
 
             <!-- SERVICE !-->
             <li class="service">
                 <div class="two columns">
-                    <img src="http://placehold.it/300x300" alt="EXAMPLE">
+                    <img src="img/technologies/skill-ios.png" alt="ios">
                 </div>
                 <div class="nine columns">
-                    <h3>Mobile Apps</h3>
+                    <h3>iOS</h3>
 
-                    <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank
-                        sirloin
-                        bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we
-                        can not only
-                        work but also have fun and learn. </p>
+                    <p>I create iOS applications. Both professionally and for fun.<br>
+                       I use Objective-C and RubyMotion, XCode and Terminal, Storyboards and code.<br>
+                       I like Apple hardware.
+                    </p>
                 </div>
             </li>
 
             <!-- SERVICE !-->
             <li class="service">
                 <div class="two columns">
-                    <img src="http://placehold.it/300x300" alt="EXAMPLE">
+                    <img src="img/technologies/skill-wp.png" alt="wp">
                 </div>
                 <div class="nine columns">
-                    <h3>Full Stack</h3>
+                    <h3>Windows Phone</h3>
 
-                    <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank
-                        sirloin
-                        bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we
-                        can not only
-                        work but also have fun and learn. </p>
+                    <p>I have experience in creating WindowsPhone applications.<br>
+                       I used to write Windows 8 desktop and tablet apps too.<br>
+                       Windows is the best system ever.
+                    </p>
+                </div>
+            </li>
+
+            <!-- SERVICE !-->
+            <li class="service">
+                <div class="two columns">
+                    <img src="img/technologies/skill-frontend.png" alt="frontend">
+                </div>
+                <div class="nine columns">
+                    <h3>Frontend</h3>
+
+                    <p>I love frontend technology and working on client side, even JavaScript (i.e. CoffeeScript).<br>
+                        My experience contains: HTML5, Jade, CSS3, Sass, AngularJS, ReactJS.<br>
+                        Tools that I use are brunch.io and NodeJS.
+                    </p>
+                </div>
+            </li>
+
+            <!-- SERVICE !-->
+            <li class="service">
+                <div class="two columns">
+                    <img src="img/technologies/skill-backend.png" alt="backend">
+                </div>
+                <div class="nine columns">
+                    <h3>Backend and Server</h3>
+
+                    <p>Working on backend is the most exciting from all of the above.<br>
+                        I like to play with different languages and frameworks.<br>
+                        So far I've tried: Scala - Play! and Spray.io, Ruby - RoR and Sinatra, Java - JEE and Struts.
+                    </p>
                 </div>
             </li>
 
@@ -372,7 +399,7 @@
 <!-- Title /-->
 <div class="row">
     <div class="twelve columns">
-        <h3>My teammates</h3>
+        <h3>Companies that I cooperate with</h3>
     </div>
 </div>
 
@@ -382,67 +409,69 @@
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXAMPLE">
+                <img class="company-logo" src="img/companies/logo-volvo.jpg" alt="Volvo IT">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
-                        <a href="#" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
-                        <a href="#" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="https://www.facebook.com/volvoitjobs" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/VolvoITmedia" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://www.volvoit.com/volvoit/global/en-gb/Pages/Home%20page.aspx" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
-            <h3>Denis Calis</h3>
-            <h4>CEO / FOUNDER</h4>
+            <h3>Volvo IT</h3>
+            <h4>Java & Android</h4>
         </div>
 
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXAMPLE">
+                <img src="img/companies/logo-blstream.jpg" alt="BLStream">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
-                        <a href="#" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
-                        <a href="#" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="#" target="_blank"><i class="icon" data-icon="&#xe034;"></i></a>
+                        <a href="https://www.facebook.com/blstream" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/blstream" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://blstream.com/" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
-            <h3>Martine Brux</h3>
-            <h4>MONEY GRABBER</h4>
+            <h3>BLStream</h3>
+            <h4>Android & iOS</h4>
         </div>
 
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXAMPLE">
+                <img src="img/companies/logo-capgemini.jpg" alt="Capgemini">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
-                        <a href="#" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
-                        <a href="#" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="#" target="_blank"><i class='icon' data-icon="&#xe042;"></i></a>
+                        <a href="https://www.facebook.com/CapgeminiPl" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/CapgeminiPl" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://www.pl.capgemini.com/" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
-            <h3>Jack Brel</h3>
-            <h4>WEB DESIGNER</h4>
+            <h3>Capgemini</h3>
+            <h4>Scala</h4>
         </div>
 
         <!-- MEMBER /-->
         <div class="three columns member">
             <div class="he-wrap tpl3 ">
-                <img src="http://placehold.it/300x350" alt="EXAMPLE">
+                <img src="img/companies/logo-arkency.jpg" alt="Arkency">
 
                 <div class="he-view">
                     <div class="info-bottom a0" data-animate="fadeInUp">
-                        <a href="#" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
-                        <a href="#" target="_blank"><i class='icon' data-icon="&#xe03a;"></i></a>
+                        <a href="https://www.facebook.com/ArkencyCom" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/arkency" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://blog.arkency.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
                     </div>
                 </div>
             </div>
-            <h3>Manon Delux</h3>
-            <h4>Video director</h4>
+            <h3>Arkency</h3>
+            <h4>Ruby on Rails</h4>
         </div>
 
     </div>
@@ -495,7 +524,7 @@
 <section id="interblock_footer">
     <div class="row">
         <div class="eight columns">
-            <h2>Thank you for taking the time to look our most recent work.</h2>
+            <h2>Thank you for taking the time to look at my portfolio.</h2>
             <p>Please feel free to contact me for any further information.</p>
         </div>
 
@@ -505,7 +534,7 @@
                 <li><a href="skype:lelonek.kamil?chat"><i class='icon' data-icon="&#xe037;"></i></a></li> <!-- Skype -->
                 <li><a href="http://blog.arkency.com/by/squixy/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a></li> <!-- Blog -->
                 <li><a href="https://www.linkedin.com/profile/view?id=218349598" target="_blank"><i class='icon' data-icon="&#xe03e;"></i></a></li> <!-- Linkedin -->
-                <li><a href="https://github.com/KamilLelonek?tab=repositories" target="_blank"><i class='icon' data-icon="&#xe600;"></i></a></li> <!-- Github -->
+                <li><a href="https://github.com/KamilLelonek?tab=repositories" target="_blank"><i class='icon' data-icon="&#xe601;"></i></a></li> <!-- Github -->
             </ul>
         </div>
     </div>
@@ -523,7 +552,7 @@
                 <p><a href="mailto:kamil@lelonek.me">kamil@lelonek.me</a></p>
             </div>
             <div class="four columns text-right">
-                <p>Some catchy slogan</p>
+                <p>Copyright &copy; <span id="current-year"></span></p>
             </div>
         </div>
     </div>
