--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 <script src="js/jquery.hoverdir.min.js" type="text/javascript"></script><!-- Filter Works -->
 <script src="js/jquery.isotope.min.js" type="text/javascript"></script><!-- Also for Filter Works -->
 <script src="js/jquery.hoverex.min.js" type="text/javascript"></script><!-- Hoverex for social icon on member -->
-<script src="js/main.min.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 
 <script>
     window._gaq = [
