Added latest projects

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="row">
         <div class="twelve columns centered">
             <h2 class="fade-it2">My name is Kamil Lelonek</h2>
-            <p class="lead fade-it2">I do Mobile, Backend and Frontend</p>
+            <p class="lead fade-it2">and I'm a full-stack developer</p>
         </div>
     </div>
 </section>
@@ -103,73 +103,106 @@
             <li><a class="active" href="#" data-filter="*">All</a></li>
             <li><a href="#" data-filter=".ios">iOS</a></li>
             <li><a href="#" data-filter=".android">Android</a></li>
+            <li><a href="#" data-filter=".wp">Windows Phone</a></li>
             <li><a href="#" data-filter=".web">Web</a></li>
         </ul>
 
         <ul class="items three_up tiles centered">
             <!-- PHOTO -->
             <li class="item ios"><a
-                    onclick="$('#portfolio1').slideDown(); $('#portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXAMPLE">
-
+                    onclick="$('#portfolio1').slideDown(); $('#portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/ios-myguide.png" alt="My Guide - Zoo Wrocław">
                 <div>
-                    <h5>NAME OF WORK</h5>
-                    <span>Exemple of span</span>
-                </div>
-            </a></li>
-
-            <!-- PHOTO -->
-            <li class="item ios"><a
-                    onclick="$('#portfolio2').slideDown(); $('#portfolio1, #portfolio3, #portfolio4, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXAMPLE">
-
-                <div>
-                    <h5>NAME OF WORK</h5>
-                    <span>Exemple of span</span>
+                    <h5>My Guide</h5>
+                    <span>Zoo Wrocław</span>
                 </div>
             </a></li>
 
             <!-- PHOTO -->
             <li class="item android"><a
-                    onclick="$('#portfolio3').slideDown(); $('#portfolio1, #portfolio2, #portfolio4, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXAMPLE">
+                    onclick="$('#portfolio2').slideDown(); $('#portfolio1, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/android-urbangame.jpg" alt="UrbanGame - City playground">
 
                 <div>
-                    <h5>NAME OF WORK</h5>
-                    <span>Exemple of span</span>
+                    <h5>UrbanGame</h5>
+                    <span>City playground</span>
                 </div>
             </a></li>
 
             <!-- PHOTO -->
             <li class="item android"><a
-                    onclick="$('#portfolio4').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio5, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXAMPLE">
+                    onclick="$('#portfolio3').slideDown(); $('#portfolio1, #portfolio2, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/android-weather.png" alt="WeatherMap - Forecast for your places">
 
                 <div>
-                    <h5>NAME OF WORK</h5>
-                    <span>Exemple of span</span>
+                    <h5>WeatherMap</h5>
+                    <span>Forecast for your places</span>
                 </div>
             </a></li>
 
             <!-- PHOTO -->
             <li class="item android"><a
-                    onclick="$('#portfolio5').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXAMPLE">
+                    onclick="$('#portfolio4').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio5, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/android-gpscounter.png" alt="GPS Counter">
 
                 <div>
-                    <h5>NAME OF WORK</h5>
-                    <span>Exemple of span</span>
+                    <h5>GPS Counter</h5>
+                    <span>Share your location</span>
+                </div>
+            </a></li>
+
+            <!-- PHOTO -->
+            <li class="item android"><a
+                    onclick="$('#portfolio5').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/android-kiedykasa.png" alt="KiedyKasa - Where is my mone">
+
+                <div>
+                    <h5>KiedyKasa</h5>
+                    <span>Where is my money</span>
                 </div>
             </a></li>
 
             <!-- PHOTO -->
             <li class="item web"><a
-                    onclick="$('#portfolio6').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="http://placehold.it/300x300" alt="EXAMPLE">
+                    onclick="$('#portfolio6').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/web-pwrrssreader.jpg" alt="PWrRssReader - University news">
 
                 <div>
-                    <h5>NAME OF WORK</h5>
-                    <span>Exemple of span</span>
+                    <h5>PWrRssReader</h5>
+                    <span>University news</span>
+                </div>
+            </a></li>
+
+            <!-- PHOTO -->
+            <li class="item web"><a
+                    onclick="$('#portfolio7').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/web-sh.png" alt="StudentHunter - get some job">
+
+                <div>
+                    <h5>StudentHunter</h5>
+                    <span>Get some job</span>
+                </div>
+            </a></li>
+
+            <!-- PHOTO -->
+            <li class="item wp"><a
+                    onclick="$('#portfolio8').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/wp-gpscounter.png" alt="LicznikGPS Counter">
+
+                <div>
+                    <h5>LicznikGPS</h5>
+                    <span>Share your location</span>
+                </div>
+            </a></li>
+
+            <!-- PHOTO -->
+            <li class="item wp"><a
+                    onclick="$('#portfolio9').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio8').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
+                    src="img/projects/wp-pwrinfo.png" alt="PWrInfo - University news">
+
+                <div>
+                    <h5>PWrInfo</h5>
+                    <span>University news</span>
                 </div>
             </a></li>
         </ul>
@@ -193,7 +226,6 @@
                     not only
                     work but also have fun and learn.</p>
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -209,7 +241,6 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
@@ -227,7 +258,6 @@
                     not only
                     work but also have fun and learn.</p>
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -243,7 +273,6 @@
                     bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
                     not only
                     work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
@@ -261,7 +290,6 @@
                     not only
                     work but also have fun and learn.</p>
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
 
@@ -278,6 +306,53 @@
                     not only
                     work but also have fun and learn.</p>
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
+            </div>
+        </div>
+
+        <!-- PORTFOLIO DETAIL -->
+        <div id="portfolio7" class="row slide_portfolio">
+            <div class="seven columns centered">
+                <img class="closeit" src="img/close.png" alt="Close Project"
+                     onclick="$('#portfolio7').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
+
+                <h3>FLAT STUDIO</h3>
+
+                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
+                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
+                    not only
+                    work but also have fun and learn.</p>
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+            </div>
+        </div>
+
+        <!-- PORTFOLIO DETAIL -->
+        <div id="portfolio8" class="row slide_portfolio">
+            <div class="seven columns centered">
+                <img class="closeit" src="img/close.png" alt="Close Project"
+                     onclick="$('#portfolio8').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
+
+                <h3>FLAT STUDIO</h3>
+
+                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
+                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
+                    not only
+                    work but also have fun and learn.</p>
+                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+            </div>
+        </div>
+
+        <!-- PORTFOLIO DETAIL -->
+        <div id="portfolio9" class="row slide_portfolio">
+            <div class="seven columns centered">
+                <img class="closeit" src="img/close.png" alt="Close Project"
+                     onclick="$('#portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
+
+                <h3>FLAT STUDIO</h3>
+
+                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
+                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
+                    not only
+                    work but also have fun and learn.</p>
                 <img src="http://placehold.it/700x700" alt="EXAMPLE">
             </div>
         </div>
